<?xml version="1.0" encoding="utf-8"?>
<!-- /* * Copyright (C) 2008 The Android Open Source Project * * Licensed 
	under the Apache License, Version 2.0 (the "License"); * you may not use 
	this file except in compliance with the License. * You may obtain a copy 
	of the License at * * http://www.apache.org/licenses/LICENSE-2.0 * * Unless 
	required by applicable law or agreed to in writing, software * distributed 
	under the License is distributed on an "AS IS" BASIS, * WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. * See the License for 
	the specific language governing permissions and * limitations under the License. 
	*/ -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 <string name="theme_box_name">Personal Center</string>
    <string name="gadget_error_text">Problem loading widget</string>
    
	<string name="default_theme">default_theme</string>
	<string name="menu_settings">Settings</string>
	<string name="title_activity_main">Theme</string>
	<string name="zheshanlock">FoldingFan</string>
	<string name="title_activity_setting">Settings</string>
	<string name="timeStyle">Time Format</string>
	<string name="preferSound">Ringtone</string>
	<string name="preferVibrate">Vibration</string>
	<string name="preferTitle1">Personalized</string>
	<string name="preferLock">Locker Enable</string>
    <string name="chooseLauncher">Select Launcher</string>
    <string name="clearLauncher">Clear the default Launcher</string>
	 <string name="Launcher">Launcher</string>
	 
    <string name="preferlockHomeTitle">Lock the HOME button</string>
	<string name="preferTitle2">Other Options</string>
	<string name="preferClickLock">one key lock</string>
	<string name="preferCreateShortcut">Activate onekey lock</string>
	<string name="preferSendDesktop">Send shortcut to homescreen</string>
	<string name="preferOn">Enable</string>
	<string name="preferOff">Disable</string>
	<string name="clickLock">one key lock</string>
	<string name="btnReturn">Back</string>
	<string name="btnShare">Share</string>
	<string name="bgSpace">Background</string>
	<string name="btnApply">Apply</string>
	<string name="btnDownload">Get</string>
	<string name="btnInstall">Instal</string>
	<string name="textPreview">Preview</string>
	<string name="toastPreviewApply">Application%s has been successfully</string>
	<string name="btnLocalLock">Lock</string>
	<string name="btnLocalTheme">Theme</string>
	<string name="btnHotLock">Hot</string>
	<string name="btnSetting">Setting</string>
	<string name="shareSubject">Share theme</string>
	<string name="shareText">I am using CoCo Theme &quot;%s&quot;，You have to try</string>
	<string name="previewLockSize">Packet size:%1$dKB&#160;&#160;&#160;&#160;&#160;&#160;author:%2$s</string>
	<string name="previewThemeSize">Theme size:%1$dKB&#160;&#160;&#160;&#160;&#160;&#160;author:%2$s</string>
	<string name="previewIntroduction">Description:</string>
	<string name="btnUninstall">Uninstall</string>
	<string name="textIntroduction">Introduction</string>
	<string name="textLockSize">Size</string>
	<string name="thumbImage">Thumbnail</string>
	<string name="getMoreTheme">Get more themes</string>
	<string name="getMoreLock">Get more Locker</string>
	<string name="textLock">Lock screen </string>
	<string name="textTheme"> Theme</string>
	<string name="bgTheme">Theme</string>
	<string name="textDownloading">%d%%</string>
	<string name="textPause">%d%%</string>
	<string name="btnDelete">Delete</string>
    <string name="soft_update_no">Already the newest version</string>
	<string name="soft_update_title">Software updates</string>
	<string name="soft_update_checking"> Checking for updates, please wait</string>
    <string name="soft_update_info">To the new version is detected, Update</string>
    <string name="soft_update_updatebtn">Update</string>
    <string name="soft_update_later">Later update</string>
    <string name="soft_updating">Being updated</string>
    <string name="soft_update_cancel">Cancel</string>
    <string name="noneed_update">Already the newest version</string>
	<string name="internet_err">The network connection is not available, please check your network settings</string>
	<string name="internet_unusual">Network is unstable, please try again later</string>
	<string name="defaulttheme">Default Theme</string>
	<string name="system_theme">System Theme</string>
	<string name="zorespace"></string>
	<string name="themetype">Type:</string>
	<string name="themeversion">Version:</string>
	<string name="themeauthor">Author:</string>
	<string name="themedata">Date:</string>
	<string name="themefeedback">Feedback:</string>
	<string name="textSdCardNotPrepare">SD card not ready</string>
	<string name="sdcard_not_available">SD card not available, please check the connection</string>
	
	<string name="airpush_dialog_positive">Update</string>
    <string name="airpush_dialog_negative">Cancel</string>
    <string name="airpush_dialog_name">Name: </string>
    <string name="airpush_dialog_size">Size: </string>
    <string name="airpush_dialog_updating_tip">App Updating Tip</string>
    <string name="airpush_dialog_introduction">Introduction: </string>
    
    <string name="server_download_file_name">CoCo Locker</string>
    <string name="server_begin_download">start download</string>
	<string name="server_download_finish">download is complete, click to Install</string>
	<string name="server_download_fail">download failed</string>
	<string name="server_downloading">downloading...</string>
	
    <string name="pull_to_refresh_pull_label">pull to refresh</string>
    <string name="pull_to_refresh_release_label">release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">refreshing...</string>
    
    <string name="pull_to_refresh_footer_release_label">release to refresh</string>
    <string name="pull_to_refresh_footer_pull_label">pull up to refresh</string>
    <string name="pull_to_refresh_footer_refreshing_label">downloading...</string>
    <string name="is_downloading"> Is downloading,please wait!</string>
    
    <string name="localtheme">My theme</string>
    <string name="applytheme">Applying theme</string>
    <string name="removetheme">Delete theme</string>
    <string name="onlinetheme">Online theme</string>
    <string name="desktop_setting">Desktop settings</string>
    <string name="basic_setting">Basic Settings</string>
    <string name="vibrator">vibrate</string>
    <string name="vibrate_on_long_click">Long-time vibrate</string>
    <string name="circle_select">Circle select</string>
    <string name="circle_select_switch">Two-finger circle switch</string>
    <string name="effect_setting">Effects settings</string>
    <string name="desktop_slide">Desktop cutting page</string>
    <string name="app_list_slide">Cut page menu</string>
    <string name="backup_and_restore">Backup and Recovery</string>
    <string name="backup_desktop">Backup desktop</string>
    <string name="restore_desktop">Restore desktop</string>
    <string name="more">More</string>
    <string name="restart_launcher">Restart the desktop</string>
    <string name="version_update">Version Update</string>
    <string name="share_friends">Share with Friends</string>
    <string name="feedback">Recommended feedback</string>
    <string name="guide_help">Help</string>
    <string name="guide_install">Installation Introduction</string>
    <string name="reset_guide">Reset Tips on Using</string>
    <string name="exit_launcher">Exit the desktop</string>
    <string name="backup_restore_setting">Backup / Restore Settings</string>
    <string name="update_feedback">Update feedback</string>
    <string name="mostly_used">Used</string>
    <string name="system_widget">Plug</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="theme">Theme</string>
    <string name="software_manager">Software Management</string>
    <string name="screen_editor">Screen editor</string>
    <string name="system_setting">System Settings</string>
    <string name="locker_setting">Settings</string>
    <string name="shake_wallpaper">Lashing for wallpaper </string>
    <string name="shake_wallpaper_not_supported">Your phone does not support the rejection wallpaper</string>
    <string name="shake_wallpaper_description">To lashing phone for wallpaper</string>
    <string name="theme_select">Theme selection</string>
    <string name="theme_change">A key facelift</string>
    <string name="no_theme_to_be_replaced">No Subjects can be replaced!</string>
	<string name="airpush_dialog_unit">(Byte)</string>
	<string name="airpush_dialog_url">Address</string>
	
	<string name="server_downloadRecommend_file_name">%s</string>
	<string name="recommend">Recommend</string>
	<string name="memory_prompt">Download more than five, please delete the phone download apk file</string>

	<string name="textFont"> Font</string>
    <string name="textWallpaper"> Wallpaper</string>
    <string name="text_lcoal_Wallpapers">Wallpaper</string>
    <string name="text_lcoal_Fonts">Font</string>
    <string name="defaultFont">Default Font</string>
    <string name="changingWallpaper">Set wallpaper, please wait...</string>
    <string name="changingTheme">Set theme, please wait...</string>
    <string name="setwallpaper">Set wallpaper</string>
    <string name="btnBuy">Buy</string>
    <string name="theme_price">Price:%1$dRMB</string>
    <string name="Initialing">Initialing，please wait...</string>
    <string name="Initial_fail">Fail to initial</string>
    <string name="Workspace_effect_list">Desktop</string>
    <string name="App_effect_list">Applist</string>
    <string name="textEffect"> Effect</string>
    <string name="reLoadApk">The download content loss, redownload.</string>
    <string name="textScene"> Scene</string>
    <string name="textWidget"> Widget</string>
    <string name="previewSize">Size:%1$dKB&#160;&#160;&#160;&#160;&#160;&#160;author:%2$s</string>
    <string name="btnLocalWidget">Widget</string>
	<string name="btnLocalScene">Scene</string>
	<string name="makesure_to_delete">Are you sure to delete?</string>
	<string name="delete_ok">OK</string>
	<string name="delete_cancel">Cancel</string>
	<string name="lockHome">Lock the HOME button</string>
   <string name="autoUpdate">Automatic Updates</string>
	 <string name="update_err">Network connection error, check for updates failed</string>
   	<string name="notify_downloading">Downloading </string>
   	<string name="notify_download_finish"> download finish!</string>
    <string name="notify_download_fail"> download fail!</string>
    <string name="notify_add_download">Add %s to download</string>
    <string name="notify_pause_download">%s pause download</string>	
    <string name="toast_setwallpaper_success">Set wallpaper successed.</string>	
    <string name="widget_local_click_toast">Long press the desktop conjured edit mode, you can drag it to the desktop.</string>
    <string name="has_bought">purchased</string>
    <string name="wallpaper_static">Desktop wallpaper</string>
    <string name="wallpaper_live">Live wallpaper</string>
    <string name="applyfont">Apply font,please wait...</string>
    <string name="set_lock_wallpaper">Set lock wallpaper</string>
    <string name="lock_wallpaper">Lock wallpaper</string>
    <string name="changeLockWallpaper">Set lock wallpaper,please wait...</string>
    <string name="download_enginer">Download enginer</string>
    <string name="price_free">Free</string>
    <string name="unknown">Unknown</string>
     <string name="select_live_wallpaper">Select Live Wallpaper</string>
       <string name="select_gallery">Select Gallery</string>
    <string name="lock_apply_toast">Please go to Screen lock and select the extended unlock，then exit </string>
</resources>